err/htmllist.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/HtmlList-2.2.2.egg-info'...
Listing './lib/python3.5/site-packages/htmllist'...
Compiling './lib/python3.5/site-packages/htmllist/algo_dict.py'...
***   File "./lib/python3.5/site-packages/htmllist/algo_dict.py", line 140
    print "Name:", data.name
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/htmllist/break_html_page.py'...
***   File "./lib/python3.5/site-packages/htmllist/break_html_page.py", line 237
    print "Testing tree attributes..."
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/htmllist/break_html_page2.py'...
***   File "./lib/python3.5/site-packages/htmllist/break_html_page2.py", line 207
    print "Test Passed"
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/htmllist/break_page_seq.py'...
***   File "./lib/python3.5/site-packages/htmllist/break_page_seq.py", line 104
    print "Test the exclusion feature, the inclusion hopefully works the same"
                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/htmllist/htmllist_demo.py'...
***   File "./lib/python3.5/site-packages/htmllist/htmllist_demo.py", line 160
    print "using the %s algorithm" % conf.name
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/htmllist/htmllist_summary.py'...
***   File "./lib/python3.5/site-packages/htmllist/htmllist_summary.py", line 151
    print "===", title, "==="
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/htmllist/pattern_quality.py'...
***   File "./lib/python3.5/site-packages/htmllist/pattern_quality.py", line 39
    print '\t'.join(str(elm) for elm in matrix[i])
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/htmllist/pysuffix_tools.py'...
***   File "./lib/python3.5/site-packages/htmllist/pysuffix_tools.py", line 60
    print str(su)+" ["+str_su+"]"
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/htmllist/repeat_pattern.py'...
***   File "./lib/python3.5/site-packages/htmllist/repeat_pattern.py", line 69
    print name, ':'
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/htmllist/repeat_pattern2.py'...
***   File "./lib/python3.5/site-packages/htmllist/repeat_pattern2.py", line 119
    print "First criteria: Occurrences", len(indices), cur_lst
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/htmllist/repeat_pattern3.py'...
***   File "./lib/python3.5/site-packages/htmllist/repeat_pattern3.py", line 66
    print "Found:", tag
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/htmllist/repeat_pattern_base.py'...
***   File "./lib/python3.5/site-packages/htmllist/repeat_pattern_base.py", line 417
    print "Factor: %s\n\tRegularity: %s\n\tWeight: %s\n\tCoverage: %s\n\tCompactness: %s" \
                                                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/htmllist/repeat_pattern_suffix.py'...
***   File "./lib/python3.5/site-packages/htmllist/repeat_pattern_suffix.py", line 76
    print "> %s (%s):\t\t%s ..." % (
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/htmllist/repeat_title.py'...
***   File "./lib/python3.5/site-packages/htmllist/repeat_title.py", line 60
    print "Found", title
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/htmllist/tag_tools.py'...
***   File "./lib/python3.5/site-packages/htmllist/tag_tools.py", line 153
    print ts
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/htmllist/test'...
Compiling './lib/python3.5/site-packages/htmllist/test/regression_tests.py'...
***   File "./lib/python3.5/site-packages/htmllist/test/regression_tests.py", line 95
    print "Save an HTML page to the %s directory" % TEMP_DIR
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/htmllist/utills.py'...
***   File "./lib/python3.5/site-packages/htmllist/utills.py", line 140
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
